# dozenal_calc

./: .gitignore  CLAUDE.md  CODE_QUALITY_SESSION.md  Cargo.toml  Cargo_toml_lints_section.md  DESIGN_NOTES.md  EXPRESSION_GRAMMAR.md  GLYPHS.md  INFO_MODAL_CONTENT.md  LICENSE  PORTING.md  README.md  clippy.toml  index.html  rustfmt.toml
.github/workflows/: deploy.yml
crates/dozenal_calc_app/: Cargo.toml  index.html
crates/dozenal_calc_app/src/: eval.rs  input.rs  layout.rs  main.rs  painting.rs  state.rs
crates/dozenal_calc_web/: Cargo.toml  index.html  manifest.webmanifest  sw.js
crates/dozenal_calc_web/src/: display.rs  glyph.rs  info.rs  keypad.rs  main.rs  router.rs  state.rs  token_glyph.rs
crates/dozenal_core/: Cargo.toml  LICENSE  README.md
crates/dozenal_core/src/: digit.rs  expression.rs  lib.rs  rational.rs  token.rs
crates/dozenal_core/src/eval/: interpret.rs  lexer.rs  mod.rs  parser.rs
research/: bigint_strategy.md  design_tokens.md  expression_evaluator.md  framework_choice.md  glyph_rendering.md  info_layout.md  reusable_crate.md
src/: eval.rs  info_content.rs  input.rs  layout.rs  logic.rs  main.rs  painting.rs  tokens.rs
