[workspace]
members = ["crates/dozenal_core", "crates/dozenal_calc_app", "crates/dozenal_calc_web"]
default-members = ["crates/dozenal_calc_app"]
resolver = "2"

# WASM-Diät: aggressive Größen-Optimierung für alle Release-Builds.
# Wirkt auf egui-Build (dist/) und Leptos-Build (dist/preview/) gleichermassen.
# Tests laufen weiterhin im Default-Profil mit Unwind-Panic.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[workspace.package]
edition = "2024"
authors = ["Eric Naville"]
repository = "https://github.com/Bawdyness/dozenal_calc"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
many_single_char_names = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
suboptimal_flops = "allow"
use_self = "allow"
missing_const_for_fn = "allow"
derive_partial_eq_without_eq = "allow"
redundant_pub_crate = "allow"
branches_sharing_code = "allow"
match_same_arms = "allow"
float_cmp = "allow"
while_float = "allow"
needless_pass_by_ref_mut = "allow"
cast_possible_wrap = "allow"

# Folgende Allows greifen, weil dozenal_core jetzt eine Library-Crate ist.
# In der Binary war derselbe Code unter pedantic+nursery sauber — pub-Sichtbarkeit
# triggert die strikteren Lints erst, sobald die Items echte API werden.
# Werden im Crate-Polish-Pass (siehe research/reusable_crate.md) systematisch
# adressiert (#[must_use], thiserror, checked_*-Naming).
must_use_candidate = "allow"
return_self_not_must_use = "allow"
should_implement_trait = "allow"
too_long_first_doc_paragraph = "allow"
doc_markdown = "allow"
