[package]
name = "dozenal_calc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
publish = false

[[bin]]
name = "dozenal_calc"
path = "src/main.rs"

[dependencies]
dozenal_core = { path = "../dozenal_core" }
eframe = "0.27.0"
egui = "0.27.0"
meval = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"

[lints]
workspace = true
