[package]
name = "dozenal_calc_web"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
publish = false

[[bin]]
name = "dozenal_calc_web"
path = "src/main.rs"

[dependencies]
dozenal_core = { path = "../dozenal_core" }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }

[lints]
workspace = true
