[package]
name = "dozenal_core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license = "MIT"
description = "Exakte Rational-Arithmetik, Periodenerkennung und Ausdrucks-Auswertung für das Dozenal-Zahlensystem (Basis 12) und beliebige andere Basen."
keywords = ["dozenal", "duodecimal", "base12", "rational", "calculator"]
categories = ["mathematics", "science"]
readme = "README.md"

[dependencies]
num-bigint = { version = "0.4", default-features = false, features = ["std"] }
num-integer = { version = "0.1", default-features = false, features = ["std"] }
num-traits = { version = "0.2", default-features = false, features = ["std"] }

[lints]
workspace = true
